# MC-Launcher

./: README.md  build.py
.github/workflows/: build.yml
client/: .gitignore  README.md  app.py  build.py  pyproject.toml  requirements.txt
client/config/: config.json
client/core/: config.py  hypcore.py  js_api.py  log.py  mcdownload.py
web/: README.md  package.json  pnpm-lock.yaml
web/src/assets/: main.css
