[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles",
    "aiohttp[speedups]",
    "fastapi>=0.115.13",
    "loguru",
    "nuitka",
    "pydantic",
    "uvicorn[standard]>=0.34.3",
    "yarl",
]
